<resources>
    <string name="app_name">Bodega Mi Merkado</string>
    <string name="app_name_mi_merkado">Mi Merkado</string>
    <string name="name_yocomproencasa">#YoComproEnCasa</string>
    <string name="name_celular">Celular</string>
    <string name="name_contrasena">Contraseña</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="name_olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="name_usuario_nuevo">¿Usuario nuevo?</string>
    <string name="name_iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="name_registrarse">REGISTRARSE</string>
    <string name="title_activity_main_principal">Mi merkado</string>


    <string name="place_order">Realizar Orden</string>
    <string name="car_buying">Carrito de Compras</string>
    <string name="paids_order">Pedidos Pagados</string>
    <string name="orders">Mis Pedidos</string>
    <string name="suggestion">Sugerencias</string>
    <string name="setting">Configuración</string>
    <string name="close_session">Cerrar Sesión</string>
    <string name="space"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
