<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logomimerkado"
    tools:context=".screen.LoginActivity">

    <EditText
        android:id="@+id/txtCelular"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/shape_login_edittext"
        android:drawableStart="@drawable/ic_phone_android_white_24dp"
        android:ems="10"
        android:hint="@string/name_celular"
        android:inputType="phone"
        android:maxLength="9"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableLeft="@drawable/ic_phone_android_white_24dp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login_edittext"
        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
        android:ems="10"
        android:hint="@string/name_contrasena"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCelular"
        android:drawableLeft="@drawable/ic_vpn_key_black_24dp" />

    <TextView
        android:id="@+id/txtOlvidarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_olvidaste_tu_contrase_a"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        android:layout_marginLeft="82dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/name_iniciar_sesi_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOlvidarPassword" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_usuario_nuevo"
        android:textColor="@android:color/white"
        android:layout_marginStart="82dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        android:layout_marginLeft="82dp" />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="270dp"
        android:layout_height="38dp"
        android:background="@drawable/shape_login_button"
        android:text="@string/name_registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ProgressBar
        android:id="@+id/pbLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>

</androidx.constraintlayout.widget.ConstraintLayout>